fix: scrollbar & loading component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -196,3 +196,26 @@ button:focus-visible {
     @apply bg-background text-foreground;
   }
 }
+
+/* 定义整个滚动条的宽度 */
+::-webkit-scrollbar {
+    width: 10px; /* 垂直滚动条的宽度 */
+    height: 10px; /* 水平滚动条的高度 */
+}
+
+/* 定义滚动条轨道的样式 */
+::-webkit-scrollbar-track {
+    background-color: #0d4736; /* 轨道的颜色 */
+    border-radius: 10px; /* 轨道圆角 */
+}
+
+/* 定义滚动条滑块的样式 */
+::-webkit-scrollbar-thumb {
+    background-color: #1f8259; /* 滑块的颜色 */
+    border-radius: 10px; /* 滑块圆角 */
+}
+
+/* 当鼠标悬停在滑块上时的样式 */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* 鼠标悬停时滑块的颜色 */
+}
